--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -54,6 +55,7 @@ header .content h1 {
 header .content h2, header .content h3 {
     font: 400 1.5rem Poly;
     text-align: center;
+    color: #FFFFFF;
     margin: 1rem 0;
 }
 
@@ -69,15 +71,30 @@ header .bg {
 header .bg img {
     width: 100%;
     max-width: 550px;
-    transition: 2s;
-    animation-name: entrada;
-    animation-duration: 2s;
-    left: -100px
 }
 
-@keyframes entrada {
-    from {left: -100px}
-    to {left: 0}
+#first { 
+    animation: slideInLeft 1s;
+}
+
+#second { 
+    animation: slideInRight 1s;
+}
+
+@keyframes slideInLeft {
+    0% {
+        transform: translateX(-2000px);
+    } 100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInRight {
+    0% {
+        transform: translateX(2000px);
+    } 100% {
+        transform: translateX(0);
+    }
 }
 
 header .content {
@@ -106,7 +123,6 @@ button {
     color: #FFFFFF;
     padding: 1rem 2rem;
     cursor: pointer;
-    transition: all 0.5s;
     overflow: hidden;
     margin: 0 auto;
     font: 400 1rem Poly;
@@ -160,21 +176,39 @@ iframe body, html, .player, .fallback {
     height: auto !important;
 }
 
+.cardContainer {
+    justify-content: center;
+}
+
 #fazendas .card {
-    max-width: 900px;
-    height: 200px;
+    max-width: 800px;
+    height: 300px;
     margin: auto;
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-columns: 30% 60%;
+    grid-template-columns: 30% 70%;
     column-gap: 2rem;
-    background: rgba(255, 255, 255, 0.514);
-    border-radius: 5px;
+    background: rgba(252, 252, 252, 0.966);
+    border-radius: 2px;
     padding: 1rem;
+    transform: translateX(53px);
+    box-shadow: 0px 0px 10px #012025;
 }
 
-#fazendas .card p {
+#fazendas .card iframe {
+    margin-left: -105px;
+    box-shadow: 0px 0px 10px #012025;
+    width: 500px;
+    height: 290px;
+}
+
+.textcontent {
+    color: black;
+    margin-left: 180px;
+}
+
+#fazendas .card li {
     margin: 0 0 0.5rem;
     text-align: left;
     font: 400 1rem Poly;
@@ -186,17 +220,34 @@ iframe body, html, .player, .fallback {
     line-height: 0.5rem;
 }
 
-#fazendas .card h1 {
+#fazendas .card h1, h2 {
     margin: 0 0 0.5rem;
     text-align: left;
     font: 400 1.5rem Poly;
-    color: #ffffff;
+    color: #012025;
+}
+
+#fazendas .card h2 {
+    margin: -0.2rem 0 0 1rem;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: bold;
+    display: flex;
+}
+
+#center {
+    height: 100vh;
+    display: flex;
 }
 
 #infos {
-    height: 100vh;
+    margin: auto 0;
     width: 100%;
     padding: 2rem 0;
+}
+
+#infos h2 {
+    text-shadow: 0 0 10px #012025;
 }
 
 #infos h2, p {
@@ -204,6 +255,10 @@ iframe body, html, .player, .fallback {
     color: #ffffff;
     text-align: center;
     margin: 1rem 0;
+}
+
+#infos p + p {
+    margin-top: -0.8rem;
 }
 
 #infos iframe {
@@ -241,6 +296,7 @@ iframe body, html, .player, .fallback {
 
 #contato form textarea {
     max-width: 600px;
+    height: 100px;
     border: 1px solid #045157;
     border-radius: 5px;
     background: #ececec;
@@ -248,9 +304,18 @@ iframe body, html, .player, .fallback {
     font: 400 1rem Poly;
 }
 
+#form {
+    border-radius: 5px;
+    margin: 15px auto 0;
+}
+
 footer {
     padding: 1rem 0;
     width: 100%;
     height: 20vh;
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+
+footer p {
+    font-size: 16px;
 }
