--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,7 @@ html {
 }
 
 body {
-    background: url(https://data.1freewallpapers.com/download/gradient-green-texture-background-2880x1800.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: linear-gradient(to left top, #055c65, #006a6e, #007975, #008778, #009579, #009076, #008a74, #008571, #006b66, #005156, #003942, #02222b); 
     overflow-x: hidden;
 }
 
@@ -65,20 +62,21 @@ header .bg {
     bottom: 0;
     right: 0;
     left: 0;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 header .bg img {
     width: 100%;
     max-width: 550px;
+    margin: 0 30px;
 }
 
 #first { 
-    animation: slideInLeft 1s;
+    animation: slideInLeft 3s;
 }
 
 #second { 
-    animation: slideInRight 1s;
+    animation: slideInRight 3s;
 }
 
 @keyframes slideInLeft {
@@ -97,7 +95,7 @@ header .bg img {
     }
 }
 
-header .content {
+/* header .content {
     position: absolute;
     top: 0;
     left: 0;
@@ -106,7 +104,7 @@ header .content {
     height: 100vh;
     display: block;
     justify-content: center;
-}
+} */
 
 header .content div {
     width: 100%;
@@ -115,8 +113,8 @@ header .content div {
     display: flex;
 }
 
-button {
-    width: 18rem;
+.button, button {
+    width: 12rem;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 50px;
     background: none;
@@ -127,9 +125,15 @@ button {
     margin: 0 auto;
     font: 400 1rem Poly;
     font-weight: bolder;
+    text-decoration: none;
+    text-align: center;
 }
 
-button:hover{
+button {
+    width: 18rem;
+}
+
+.button:hover, button:hover{
     text-shadow: 0 0 10px #012025;
     box-shadow: 0 0 10px #012025;
     background: #ffffff38;
@@ -162,10 +166,14 @@ nav a:hover {
 
 #fazendas {
     margin-top: 100vh;
+    /* background-image: linear-gradient(to left bottom, #055c65, #34787f, #56969b, #77b5b7, #99d4d4, #a0dedd, #a7e7e7, #aef1f0, #9be6e7, #88dbdf, #73d1d7, #5dc6cf);
+    transform: skew(0deg, -3deg) translate(0, -45px); */
+    box-shadow: 0px 0px 10px #012025;
     padding: 2rem 0 0;
-    height: 100vh;
+    height: 80vh;
     width: 100%;
     justify-content: center;
+    align-self: center;
 }
 
 #fazendas iframe {
@@ -194,6 +202,7 @@ iframe body, html, .player, .fallback {
     padding: 1rem;
     transform: translateX(53px);
     box-shadow: 0px 0px 10px #012025;
+    /* transform: skew(0deg, 3deg) translate(0, 45px); */
 }
 
 #fazendas .card iframe {
@@ -299,7 +308,7 @@ iframe body, html, .player, .fallback {
     height: 100px;
     border: 1px solid #045157;
     border-radius: 5px;
-    background: #ececec;
+    background: #fbfbfb;
     padding: 0.8rem;
     font: 400 1rem Poly;
 }
@@ -313,7 +322,7 @@ footer {
     padding: 1rem 0;
     width: 100%;
     height: 20vh;
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
 }
 
 footer p {
